phpstan config patched

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,11 +4,12 @@ includes:
 parameters:
     level: 4
     paths:
-        - src
+        - app
         - config
         - database
+        - resources
     tmpDir: build/phpstan
-    checkOctaneCompatibility: true
+    checkOctaneCompatibility: false
     checkModelProperties: true
     checkMissingIterableValueType: false
 
