--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -13,6 +13,8 @@ parameters:
 
     tmpDir: build/phpstan
 
+    checkOctaneCompatibility: true
+
     checkModelProperties: true
 
     checkMissingIterableValueType: false
